# kelvin-stardate

./: .gitignore  CHANGELOG.md  README.md  SETUP_FOR_DUMMIES.md  TODO.md  kelvin_cli_input.py  kelvin_colors.py  kelvin_errors.py  kelvin_help.py  kelvin_help_old.py  kelvin_stardate.py  kelvin_stardate_cli.py  make-transcript.ps1  pyproject.toml  requirements.txt  test_color.py  test_kelvin_stardate.py
data/: canon_confirmed.yaml
old/: kelvin_stardate_converter.py
references/scripts/: startrek_movie_reboot_screenplay.txt
src/kelvin_stardate/: __init__.py  core.py  errors.py  validators.py
src/kelvin_stardate.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/kelvin_stardate/cli/: colors.py  helptext.py  main.py  prompts.py
tests/: color_test.py  conftest.py  test_color.py  test_core.py  test_error_registry_complete.py  test_prompts_control_errors.py  test_validators_errors.py
tools/: canon_editor.py  color_preview_kelvin.py
working_fully/: kelvin_stardate_cli.py
working_fully_v1.1/: kelvin_stardate.py
