[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kelvin-stardate"
version = "0.1.0"
description = "Kelvin timeline stardate <-> Earth date conversion tool"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Kylie Gilbert" }]

# Keep this minimal for now; add your real runtime deps as you confirm them.
dependencies = [
    "colorama>=0.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
]

[project.scripts]
kelvin-stardate = "kelvin_stardate.cli.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
