[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kelvin-stardate"
version = "0.1.6"
description = "Kelvin timeline stardate <-> Earth date conversion tool"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "Kylie Gilbert" }]

# Runtime dependencies
# add streamlit eventually
dependencies = [
    "colorama>=0.4",
]

# add pyyaml eventually
[project.optional-dependencies]
dev = [
    "pytest>=7",
]

[project.scripts]
kelvin-stardate = "kelvin_stardate.cli.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
